remove apache http client dependency